# Irradiance.jl

./: AbstractEffect.jl  Cargo.toml  Irradiance.jl  IrradianceCLI.jl  LEDTypes.jl  Manifest.toml  ParseConfig.jl  Project.toml  README.md  UpdateMethods.jl  install_deps.jl  irradiance.jl  lights.json  run_app.jl
effects/: HeatWave.jl  NBars.jl  WalkingPulse.jl  walkingpulse.jl
julia/: Project.toml  RotatingBuffer.jl
julia/legacy_effects/: WalkingPulse.jl
julia/src/: Irradiance.jl
legacy_effects/: BarsMethods.jl
src/: AbstractEffect.jl  CPUFallbacks.jl  Irradiance.jl  LEDTypes.jl  LICENSE  ParseConfig.jl  RotatingBuffer.jl  install_deps.jl  lib.rs  main.rs  run_app.jl  sound.rs
src/control/: ledarray.rs  ledchannel.rs  ledcontroller.rs  ledstrip.rs  ledtypes.rs  mod.rs
src/effects/: AbstractEffect.rs  WalkingPulse.jl  abstract_effect.rs  fake_effect.rs  mod.rs
